1998-04-17  Stephan Kulow  <coolo@kde.org>

	* kfiledetaillist.cpp: implemented the date field
	
	* kfiledetaillist.cpp: made the columns wider

	* kfileinfocontents.cpp: use the new icons by Mark

Thu Apr 16 10:51:24 1998  Daniel Grana <grana@ie.iwi.unibe.ch>

	* kfiledialog.*: some small fixes concerning preview
        
        * kfileinfocontents.cpp: fixed sorting bug in preview
        
        * kfilepreview.*: small bug fixes
        
        * kpreview.*: small bug fixes
        
        * added some documentation

1998-04-15  Stephan Kulow  <coolo@kde.org>

	* kfilepreview.cpp: use a list box instead of simple view

	* kfiledialog.cpp: fixed an ugly bug

1998-04-14  Stephan Kulow  <coolo@kde.org>

	* kfiledialogconf.cpp: removed the width/height sliders
	
	* kfiledialog.cpp: save the width and height on exit

	* kfiledialogconf.cpp: added more guys to the about box

	* kfiledialog.h: removed init*Children. They were useless

	* kfiledialog.cpp: set the default size to a useful value

Mon Apr  6 17:30:18 1998  Daniel Grana <grana@ie.iwi.unibe.ch>

	* kfilepreview.*: restructured previewing, one can now easily
        use custom previewers, dynamically
        
        * kpreview.*: changes for allowing custom previewers, two previewers
        are hardcoded so far

	* kfiledialog.*: changes changes for allowing custom previewers
        
        * kfstest.cpp: changes to preview mode
        
        * xview.*: QimageIO module allowing the visual-schnauzer generated
        images to be loaded

1998-04-06  Stephan Kulow  <coolo@kde.org>

	* debug.h: added debugC. An empty macro to hide debug output

Thu Apr  2 19:39:37 1998  Daniel Grana <grana@ie.iwi.unibe.ch>

	* kpreview.*: widget which for now shows some info about a 
        file/folder along with the first 20-30 lines of it
        
        * kfilepreview.*: added a new view which has a preview of any text
        file in the right part
        