@@ -1,3 +1,7 @@
+1998-05-10  Stephan Kulow  <coolo@kde.org>
+
+	* kfiledialog.cpp: tried to speed up the refresh
+
 1998-04-17  Stephan Kulow  <coolo@kde.org>
 
 	* kfiledetaillist.cpp: implemented the date field
